added flicker lib localy

--- a/headout3.html
+++ b/headout3.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles\headout3.css">
     <link href="fontawesome-free-5.15.4-web\css\all.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <link rel="stylesheet" href="flickity-docs\docs\flickity.min.css">
     <script src="jquery.min.js"></script>
     <title>New Headout.com</title>
 </head>
