--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles\headout.css">
+    <link rel="stylesheet" href="flickity-docs\docs\flickity.min.css">
     <link href="fontawesome-free-5.15.4-web\css\all.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css"> -->
     <script src="jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>New Headout.com</title>
@@ -31,10 +32,10 @@
         </a>
 
         <div class="topnav">
-            <div>
+            <!-- <div>
                 <input onclick="myFunction()" type="checkbox" id="toggle" />
                 <label for="toggle"></label>
-            </div>
+            </div> -->
             <a href="" class="topnav-links"><i class="fas fa-globe"></i> English</a>
             <a href="" class="topnav-links"><i class="fas fa-dollar-sign"></i> USD</a>
             <a href="" class="topnav-links"><i class="far fa-question-circle"></i> Help</a>
@@ -55,9 +56,9 @@
                             <h1>The world on your tap!</h1>
                             <p>Get the Headout app to get tickets on your phone<br>and access app-only deals. Talk about win-win.
                             </p>
-                            <a href="https://itunes.apple.com/us/app/tourlandish/id899327000?ls=1&mt=8"><img class="storeimg" src="images\apple app.png"></a>
+                            <a href=""><img class="storeimg" src="images\apple app.png"></a>
 
-                            <a href="https://play.google.com/store/apps/details?id=com.tourlandish.chronos&hl=en"><img class="storeimg" src="images\google app.png"></a>
+                            <a href=""><img class="storeimg" src="images\google app.png"></a>
                         </div>
                         <div class="column3">
                             <img class="image2" src="images\iPhoneX_mockup.jpg">
@@ -296,9 +297,9 @@
                 <h1>The world on your tap!</h1>
                 <p>Get the Headout app to get tickets on your phone<br>and access app-only deals. Talk about win-win.
                 </p>
-                <a href="https://itunes.apple.com/us/app/tourlandish/id899327000?ls=1&mt=8"><img class="storeimg" src="images\apple app.png"></a>
+                <a href=""><img class="storeimg" src="images\apple app.png"></a>
 
-                <a href="https://play.google.com/store/apps/details?id=com.tourlandish.chronos&hl=en"><img class="storeimg" src="images\google app.png"></a>
+                <a href=""><img class="storeimg" src="images\google app.png"></a>
             </div>
             <div class="column3">
                 <img class="image2" src="images\iPhoneX_mockup.jpg">
