--- a/headout2.html
+++ b/headout2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles\headout2.css">
     <link href="fontawesome-free-5.15.4-web\css\all.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <link rel="stylesheet" href="flickity-docs\docs\flickity.min.css">
     <script src="jquery.min.js"></script>
     <title>New Headout.com</title>
 </head>
@@ -52,9 +52,9 @@
                             <h1>The world on your tap!</h1>
                             <p>Get the Headout app to get tickets on your phone<br>and access app-only deals. Talk about win-win.
                             </p>
-                            <a href="https://itunes.apple.com/us/app/tourlandish/id899327000?ls=1&mt=8"><img class="storeimg" src="images\apple app.png"></a>
+                            <a href=""><img class="storeimg" src="images\apple app.png"></a>
 
-                            <a href="https://play.google.com/store/apps/details?id=com.tourlandish.chronos&hl=en"><img class="storeimg" src="images\google app.png"></a>
+                            <a href=""><img class="storeimg" src="images\google app.png"></a>
                         </div>
                         <div class="column3">
                             <img class="image2" src="images\iPhoneX_mockup.jpg">
@@ -290,9 +290,9 @@
                 <h1>The world on your tap!</h1>
                 <p>Get the Headout app to get tickets on your phone<br>and access app-only deals. Talk about win-win.
                 </p>
-                <a href="https://itunes.apple.com/us/app/tourlandish/id899327000?ls=1&mt=8"><img class="storeimg" src="images\apple app.png"></a>
+                <a href=""><img class="storeimg" src="images\apple app.png"></a>
 
-                <a href="https://play.google.com/store/apps/details?id=com.tourlandish.chronos&hl=en"><img class="storeimg" src="images\google app.png"></a>
+                <a href=""><img class="storeimg" src="images\google app.png"></a>
             </div>
             <div class="column3">
                 <img class="image2" src="images\iPhoneX_mockup.jpg">
